--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shipping-sheets",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "repository": "https://github.com/marijndegen/shipping-sheets.git",
   "author": "Marijn Degen <16215123+marijndegen@users.noreply.github.com>",
@@ -12,5 +12,10 @@
   "scripts": {
     "build": "tsc",
     "prepublish": "tsc"
-  }
+  },
+  "files": [
+    "dist/*.js",
+    "dist/*.d.ts",
+    "dist/*.js.map"
+  ]
 }
