--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "shipping-sheets",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "dist/index.js",
   "repository": "https://github.com/marijndegen/shipping-sheets.git",
   "author": "Marijn Degen <16215123+marijndegen@users.noreply.github.com>",
   "license": "GPL-3.0",
   "private": false,
   "devDependencies": {
+    "@types/node": "^20.11.19",
     "typescript": "^5.3.3"
   },
   "scripts": {
@@ -17,5 +18,9 @@
     "dist/*.js",
     "dist/*.d.ts",
     "dist/*.js.map"
-  ]
+  ],
+  "dependencies": {
+    "csv-stringify": "^6.4.5",
+    "xlsx": "^0.18.5"
+  }
 }
